# MyVolumeRendering

./: CMakeLists.txt  LICENSE  README.md
include/: camera.h
shader/: shader.fs  shader.vs
src/: main.cpp
